--- a/bstext.html
+++ b/bstext.html
@@ -54,24 +54,28 @@
   </head>
   <body>
   
-  <div class="topnav">
-    <nav class="navbar navbar-expand-sm" style="background-color: #2d7a44;">
-    <a class="navbar-brand" href="index.html">
-    <img src="images/logo.png" class="img-fluid" alt="logo" style="width:200px;height:65px">
-    </a>
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="index.html" style ="font-size: 30px;font-family:cwTeXYen,sans-serif;color:white">關於龍品</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="product.html" style ="font-size: 30px;font-family:cwTeXYen,sans-serif;color:white">產品介紹</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="booking.html" style ="font-size: 30px;font-family:cwTeXYen,sans-serif;color:white">線上訂餐</a>
-      </li>
-    </ul>
-  </nav>   
-  </div>
+    <nav class="navbar navbar-expand-md  navbar-dark" style="background-color: #2d7a44;">
+      <img src="images/logo.png" class="img-fluid" alt="logo" style="width:200px;height:75px;">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+           <a class="navbar-brand" href="index.html">       
+              </a>
+              <ul class="navbar-nav ">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html" style ="font-size: 30px;font-family:cwTeXYen,sans-serif;color:white">關於龍品</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="product.html" style ="font-size: 30px;font-family:cwTeXYen,sans-serif;color:white">產品介紹</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="booking.html" style ="font-size: 30px;font-family:cwTeXYen,sans-serif;color:white">線上訂餐</a>
+                </li>
+              </ul>
+        </div>  
+      </nav>
   
   <div class="container-fluid">
     <form class="form-inline" action="/action_page.php">
