--- a/index.html
+++ b/index.html
@@ -16,26 +16,32 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm" style="background-color: #2d7a44;">
-    <a class="navbar-brand" href="index.html">
-    <img src="images/logo.png" class="img-fluid" alt="logo" style="width:200px;height:65px">
-    </a>
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="index.html" style ="font-size: 30px;font-family:cwTeXYen,sans-serif;color:white">關於龍品</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="product.html" style ="font-size: 30px;font-family:cwTeXYen,sans-serif;color:white">產品介紹</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="booking.html" style ="font-size: 30px;font-family:cwTeXYen,sans-serif;color:white">線上訂餐</a>
-      </li>
-    </ul>
-  </nav>   
+  <nav class="navbar navbar-expand-md  navbar-dark" style="background-color: #2d7a44;">
+    <img src="images/logo.png" class="img-fluid" alt="logo" style="width:200px;height:75px;">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+       <a class="navbar-brand" href="index.html">       
+        </a>
+        <ul class="navbar-nav ">
+           <li class="nav-item">
+          <a class="nav-link" href="index.html" style ="font-size: 25px;font-family:cwTeXYen,sans-serif;color:white">關於龍品</a>
+           </li>
+           <li class="nav-item">
+          <a class="nav-link" href="product.html" style ="font-size: 25px;font-family:cwTeXYen,sans-serif;color:white">產品介紹</a>
+           </li>
+          <li class="nav-item">
+          <a class="nav-link" href="booking.html" style ="font-size: 25px;font-family:cwTeXYen,sans-serif;color:white">線上訂餐</a>
+          </li>
+        </ul>
+      </div>  
+  </nav>
       
   <div class="w3-display-container w3-text-white">
-    <img src="images\book1.jpg" class="img-fluid" alt="龍品快餐店"  style="margin-bottom:10px;height: 300px; width:100%;">
-    <div class="w3-display-middle w3-large"><b style ="font-size: 50px;font-family:cwTeXYen,sans-serif;color:rgb(0, 0, 0);letter-spacing: 50px;">關於龍品</b></div>
+    <img src="images\book.jpg" class="img-fluid" alt="龍品快餐店"  style="margin-bottom:10px;height: 300px; width:100%;">
+    <div class="w3-display-middle w3-large"><b style ="font-size: 50px;font-family:cwTeXYen,sans-serif;color:rgb(0, 0, 0);">關於龍品</b></div>
   </div>
   <div class="w3-container" id="menu">
     <div class="w3-content" style="max-width:100%">
