--- a/product.html
+++ b/product.html
@@ -14,103 +14,110 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-sm " style="background-color: #2d7a44;">
-        <a class="navbar-brand" href="index.html">
-        <img src="images/logo.png" class="img-fluid" alt="logo" style="width:200px;height:65px">
-        </a>
-        <ul class="navbar-nav ">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html" style ="font-size: 30px;font-family:cwTeXYen,sans-serif;color:white">關於龍品</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="product.html" style ="font-size: 30px;font-family:cwTeXYen,sans-serif;color:white">產品介紹</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="booking.html" style ="font-size: 30px;font-family:cwTeXYen,sans-serif;color:white">線上訂餐</a>
-          </li>
-        </ul>
-      </nav>
+	<nav class="navbar navbar-expand-md  navbar-dark" style="background-color: #2d7a44;">
+		<img src="images/logo.png" class="img-fluid" alt="logo" style="width:200px;height:75px;">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+			<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="collapsibleNavbar">
+			<ul class="navbar-nav">
+			 <a class="navbar-brand" href="index.html">       
+				</a>
+				<ul class="navbar-nav ">
+					 <li class="nav-item">
+					<a class="nav-link" href="index.html" style ="font-size: 25px;font-family:cwTeXYen,sans-serif;color:white">關於龍品</a>
+					 </li>
+					 <li class="nav-item">
+					<a class="nav-link" href="product.html" style ="font-size: 25px;font-family:cwTeXYen,sans-serif;color:white">產品介紹</a>
+					 </li>
+					<li class="nav-item">
+					<a class="nav-link" href="booking.html" style ="font-size: 25px;font-family:cwTeXYen,sans-serif;color:white">線上訂餐</a>
+					</li>
+				</ul>
+			</div>  
+	</nav>
+
       <div class="w3-display-container w3-text-white">
         <img src="images\13.jpg" class="img-fluid" alt="龍品快餐店"  style="margin-bottom:10; height: 300px; width:100%;">
-        <div class="w3-display-middle w3-large"><b style ="font-size: 50px;font-family:cwTeXYen,sans-serif;color:rgb(255, 255, 255);letter-spacing: 50px;">產品介紹</b></div>
+        <div class="w3-display-middle w3-large"><b style ="font-size: 50px;font-family:cwTeXYen,sans-serif;color:rgb(255, 255, 255);">產品介紹</b></div>
       </div>
 
         <div class="btn-group" style="margin:10px 8px;width:100%;">  
-          <a class="btn  btn btn-medium btn-blue"  href="#a1">魯肉便當</a>
-	        <a class="btn btn-medium btn-green" href="#a2">特製便當</a>
-	        <a class="btn btn-medium btn-orange" href="#a3">花枝捲飯</a>
-	        <a class="btn btn-medium btn-red" href="#a4">蝦捲飯</a>
-	        <a class="btn btn-medium btn-maroon" href="#a5">滷排骨飯</a>
-	        <a class="btn btn-medium btn-fuchsia" href="#a6">炸雞腿飯</a>      
+          <a class="btn btn-blue"  href="#a1"><p class="font10">魯肉便當</p></a>
+	        <a class="btn  btn-green" href="#a2"><p class="font10">特製便當</p></a>
+	        <a class="btn  btn-orange" href="#a3"><p class="font10">花枝捲飯</p></a>
+	        <a class="btn  btn-red" href="#a4"><p class="font10">蝦捲飯</p></a>
+	        <a class="btn  btn-maroon" href="#a5"><p class="font10">滷排骨飯</p></a>
+	        <a class="btn  btn-fuchsia" href="#a6"><p class="font10">炸雞腿飯</p></a>      
 	
         </div>
         <div class="btn-group" style="margin:10px 8px;width:100%;"> 
-        	<a class="btn btn-medium btn-indigo" href="#a7">鱈魚飯</a>
-	        <a class="btn btn-medium btn-saddlebrown" href="#a8">炸排骨飯</a>
-        	<a class="btn btn-medium btn-chocolate" href="#a9">香雞排飯</a>
-	        <a class="btn btn-medium btn-gold" href="#a10">雙捲飯</a>
-	        <a class="btn btn-medium btn-darkolivegreen" href="#a11">三寶飯</a>
-	        <a class="btn btn-medium btn-royalblue" href="#a12">招牌飯</a>
+        	<a class="btn  btn-indigo" href="#a7"><p class="font10">鱈魚飯</p></a>
+	        <a class="btn  btn-saddlebrown" href="#a8"><p class="font10">炸排骨飯</p></a>
+        	<a class="btn  btn-chocolate" href="#a9"><p class="font10">香雞排飯</p></a>
+	        <a class="btn  btn-gold" href="#a10"><p class="font10">雙捲飯</p></a>
+	        <a class="btn  btn-darkolivegreen" href="#a11"><p class="font10">三寶飯</p></a>
+	        <a class="btn  btn-royalblue" href="#a12"><p class="font10">招牌飯</p></a>
         </div >
 	
-<div class="container-fluid" id="a1" style="margin-top:5em;">
+<div class="container" id="a1" style="margin-top:10em;">
 	<img src="images\section1.jpg" align="left" style="width:450px ;height:300px;"/>  
 	<p class="font8">魯肉便當 <hr></p>
 	<p class="font9">主餐:滷肉</br>配菜:蛋加三樣菜自選</br>價格:NT60元</p>
 </div>
-<div class="container-fluid" id="a2" style="margin-top:5em;">
+<div class="container" id="a2" style="margin-top:10em;">
 	<img src="images\section2.jpg" align="right" style="width:450px ;height:300px;" />
 	<p class="font8">特製便當<hr></p>
 	<p class="font9">主餐:排骨.蝦捲.滷蛋</br>配菜:滷蛋加三樣菜自選</br>價格:NT80元</p>
 	</div>
- <div class="container-fluid" id="a3" style="margin-top:5em;">
+ <div class="container" id="a3" style="margin-top:10em;">
 	<img src="images\section1.jpg" align="left" style="width:450px ;height:300px" />  
 	<p class="font8">花枝捲飯<hr></p>
 	<p class="font9">主餐:三條花枝卷</br>配菜:三樣菜自選</br>價格:NT85元</p>
 </div>
-<div class="container-fluid" id="a4" style="margin-top:5em;">
+<div class="container" id="a4" style="margin-top:10em;">
 	<img src="images\section4.jpg" align="right" style="width:450px ;height:300px"/>
 	<p class="font8">蝦捲飯<hr></p>	
 	<p class="font9">主餐:三條蝦捲</br>配菜:三樣菜自選</br>價格:NT85元</p>
 </div>
-<div class="container-fluid" id="a5" style="margin-top:5em;">
+<div class="container" id="a5" style="margin-top:10em;">
 <figure>
 	<img src="images\section5.jpg" align="left" style="width:450px ;height:300px"/>
 	<p class="font8">滷排骨飯<hr></p>
 	<p class="font9">主餐:滷排</br>配菜:三樣菜自選</br>價格:NT80元</p>
 	</figure>
 </div>
-<div class="container-fluid" id="a6" style="margin-top:5em;">
+<div class="container" id="a6" style="margin-top:10em;">
 	<img src="images\section6.jpg" align="right" style="width:450px ;height:300px"/>
 	<p class="font8">炸雞腿飯<hr></p>
 	<p class="font9">主餐:一支雞腿</br>配菜:三樣菜自選</br>價格:NT85元</p>
 </div>
-<div class="container-fluid" id="a7" style="margin-top:5em;">
+<div class="container" id="a7" style="margin-top:10em;">
 	<img src="images\section7.jpg"align="left" style="width:450px ;height:300px"/>
 	<p class="font8">鱈魚飯<hr></p>
 	<p class="font9">主餐:鱈魚</br>配菜:三樣菜自選</br>價格:NT100元</p>
 </div>
-<div class="container-fluid" id="a8" style="margin-top:5em;">
+<div class="container" id="a8" style="margin-top:10em;">
 	<img src="images\section8.jpg" align="right" style="width:450px ;height:300px"/>
 	<p class="font8">炸排骨飯<hr></p>
 	<p class="font9">主餐:排骨</br>配菜:三樣菜自選</br>價格:NT80元</p>
 </div>
-<div class="container-fluid" id="a9" style="margin-top:5em;">
+<div class="container" id="a9" style="margin-top:10em;">
 	<img src="images\section9.jpg"align="left" style="width:450px ;height:300px"/>
 	<p class="font8">香雞排飯<hr></p>
 	<p class="font9">主餐:香雞排</br>配菜:三樣菜自選</br>價格:NT85元</p>
 </div>
-<div class="container-fluid" id="a10" style="margin-top:5em;">
+<div class="container" id="a10" style="margin-top:10em;">
 	<img src="images\section10.jpg" align="right" style="width:450px ;height:300px"/>
 	<p class="font8">雙捲飯<hr></p>
 	<p class="font9">主餐:蝦捲兩條.花枝捲一條</br>配菜:三樣菜自選</br>價格:NT85元</p>
 </div>
-<div class="container-fluid" id="a11" style="margin-top:5em;">
+<div class="container" id="a11" style="margin-top:10em;">
 	<img src="images\section11.jpg" align="left" style="width:450px ;height:300px"/>
 	<p class="font8">三寶飯<hr></p>
 	<p class="font9">主餐:花枝捲一條.蝦捲一條.排骨</br>配菜:三樣菜自選</br>價格:NT85元</p>
 </div>
-<div class="container-fluid" id="a12" style="margin-top:5em;">
+<div class="container" id="a12" style="margin:10em 0;">
 	<img src="images\section12.jpg" align="right" style="width:450px ;height:300px"/>
 	<p class="font8">招牌飯<hr></p>
 	<p class="font9">主餐:蝦捲兩條.排骨</br>配菜:三樣菜自選</br>價格:NT85元</p>
