--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="styles\css.css" media="screen" type="text/css" />
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-<script src="https://kit.fontawesome.com/c3595a1670.js" crossorigin="anonymous"></script>
-<title>龍品快餐店</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="styles\css.css" media="screen" type="text/css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <script src="https://kit.fontawesome.com/c3595a1670.js" crossorigin="anonymous"></script>
+  <title>龍品快餐店</title>
 </head>
 
 <body>
@@ -20,141 +21,149 @@
       <div class="navbar navbar-expand-md">
         <a class="navbar-brand" href="#">
           <img src="images/logo.png" alt="logo" style="width:130px;">
-        </a> 
-      <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-      <span class="fas fa-bars"></span>
-      </button>
-            <div class="collapse navbar-collapse " id="collapsibleNavbar">
-        <ul class="navbar-nav ">
+        </a>
+        <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="fas fa-bars"></span>
+        </button>
+        <div class="collapse navbar-collapse " id="collapsibleNavbar">
+          <ul class="navbar-nav ">
             <a class="navbar-brand" href="index.html"></a>
-        <ul class="navbar-nav ">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">關於龍品</a></li>
-          <li class="nav-item">
-            <a class="nav-link" href="product.html">產品介紹</a></li>
-          <li class="nav-item">
-            <a class="nav-link" href="booking.html" >線上訂餐</a>
-          <li>
-        </ul>
-      </div>  
+            <ul class="navbar-nav ">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">關於龍品</a></li>
+              <li class="nav-item">
+                <a class="nav-link" href="product.html">產品介紹</a></li>
+              <li class="nav-item">
+                <a class="nav-link" href="booking.html">線上訂餐</a>
+              <li>
+            </ul>
+        </div>
       </div>
     </div>
-  </section>	
+  </section>
 
-  <section id="index-second" >
+  <section id="index-second">
     <div class="w3-display-container">
       <img src="images\15.jpg" class="img-fluid" alt="龍品快餐店" style="width: 100%; height: 650px;">
       <div class="w3-display-middle ">
         <h1>關於龍品</h1>
-		    <p>二十多年用心經營，台中人首選的好味道</p>
-		  </div>
-     </div>
+        <p>二十多年用心經營，台中人首選的好味道</p>
+      </div>
+    </div>
   </section>
 
-<section id="index-third">
-<div class="container-fluid" id="menu">
-    <div class="row w3-card">
-      <div class="col-md-6">
-        <a href="javascript:void(0)" onclick="openMenu(event, 'business');" id="myLink">
-          <div class="tablink"><h2>經營理念</h2></div></a>
+  <section id="index-third">
+    <div class="container-fluid" id="menu">
+      <div class="row w3-card">
+        <div class="col-md-6">
+          <a href="javascript:void(0)" onclick="openMenu(event, 'business');" id="myLink">
+            <div class="tablink">
+              <h2>經營理念</h2>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-6">
+          <a href="javascript:void(0)" onclick="openMenu(event, 'history');">
+            <div class=" tablink">
+              <h2>歷史起源</h2>
+            </div>
+          </a>
+        </div>
       </div>
-      <div class="col-md-6">
-        <a href="javascript:void(0)" onclick="openMenu(event, 'history');">
-          <div class=" tablink"> <h2>歷史起源</h2></div> </a>
-      </div>      
-</div>
 
-<div id="business" class="container-fluid menu w3-card"> 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <p>
-          遵循古法、口味道地、食材保證新鮮</br>
-          －讓您 吃的更安心</br>
-          服務用心</br>
-          －您的滿意，就是我們追求的信念
-          </p>
+      <div id="business" class="container-fluid menu w3-card">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <p>
+                遵循古法、口味道地、食材保證新鮮</br>
+                －讓您 吃的更安心</br>
+                服務用心</br>
+                －您的滿意，就是我們追求的信念
+              </p>
+            </div>
+            <div class="col-md-6">
+              <img class="img-fluid" src="images\business.jpeg">
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="col-md-6">
-        <img class="img-fluid" src="images\business.jpeg">
+
+      <div id="history" class="container-fluid menu w3-card">
+        <div class="container ">
+          <div class="row justify-content-center">
+            <div calss="col-md-6">
+              <img class="img-fluid" src="images\history.jpg">
+            </div>
+            <div class="col-md-6">
+              <p>
+                創始店名為"龍品魚丸店"，創立於民國八十三年，在台
+                中已好幾家分店的龍品魚丸店，而且在網路上相當高名
+                氣與好評，不少部落客和網友都直稱這家是台中便當界
+                美食，且經常店門口都會排上一場串人龍，就能知道民
+                眾的受歡迎程度。龍品快餐店則是加盟店，但與創始店
+                龍品魚丸店有所不同，快餐店雖為加盟店，但經營方式
+                以及食材的烹煮都是老闆與老闆娘自行烹調，僅與魚丸
+                店拿取蝦漿的食材原料，因此取龍品之名。
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>   
+  </section>
 
-<div id="history" class="container-fluid menu w3-card">
-  <div class="container ">
-    <div class="row justify-content-center">
-      <div calss="col-md-6">
-        <img class="img-fluid" src="images\history.jpg">
-      </div>
-      <div class="col-md-6">
-        <p >
-          創始店名為"龍品魚丸店"，創立於民國八十三年，在台
-          中已好幾家分店的龍品魚丸店，而且在網路上相當高名
-          氣與好評，不少部落客和網友都直稱這家是台中便當界
-          美食，且經常店門口都會排上一場串人龍，就能知道民
-          眾的受歡迎程度。龍品快餐店則是加盟店，但與創始店
-          龍品魚丸店有所不同，快餐店雖為加盟店，但經營方式
-          以及食材的烹煮都是老闆與老闆娘自行烹調，僅與魚丸
-          店拿取蝦漿的食材原料，因此取龍品之名。
-        </p >
-      </div>
-    </div>
-  </div>
-</div>       
-</div>     
-</section>
-
-<section id="index-fourth">
-  <div class="container text-align">
-    <div class="row justify-content-center iframe-rwd">
+  <section id="index-fourth">
+    <div class="container text-align">
+      <div class="row justify-content-center iframe-rwd">
         <h2>我們的位置</h2>
-        <iframe  src='https://maps.google.com.tw/maps?f=q&hl=zh-TW&geocode=&q=台中市北區北平路二段68之1號&z=16&output=embed&t='></iframe>
+        <iframe
+          src='https://maps.google.com.tw/maps?f=q&hl=zh-TW&geocode=&q=台中市北區北平路二段68之1號&z=16&output=embed&t='></iframe>
         <p>營業時間:週一至週六AM11:00-PM8:00</p>
       </div>
- 
- 
-</section>
 
-<section id="latest">
-	<footer>
-		<div class="container">
-		<div class="row">
-			<div class="col-md-4">
-				<img class="img-fluid" src="images/logo1.png">
-			</div>
-			<div class="col-md-4">
-				<h3>連結</h3>
-				<a href="index.html">關於龍品</a>
-				<a href="product.html">產品介紹</a>
-				<a href="booking.html">線上訂餐</a>
-			</div>
-			<div class="col-md-4">
-				<h3>聯絡我們</h3>
-				<p>台中市北區北平路二段68之1號<br>tel:(04)-2291-8106</p>
-			</div>
-		</div>
-</footer>
-</section>
 
-<script>
-// Tabbed Menu
-function openMenu(evt, menuName) {
-var i, x, tablinks;
-x = document.getElementsByClassName("menu");
-for (i = 0; i < x.length; i++) {
-x[i].style.display = "none";
-}
-tablinks = document.getElementsByClassName("tablink");
-for (i = 0; i < x.length; i++) {
-tablinks[i].className = tablinks[i].className.replace(" w3-dark-grey", "");
-}
-document.getElementById(menuName).style.display = "block";
-evt.currentTarget.firstElementChild.className += " w3-dark-grey";
-}
-document.getElementById("myLink").click();
-</script>     
+  </section>
+
+  <section id="latest">
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <img class="img-fluid" src="images/logo1.png">
+          </div>
+          <div class="col-md-4">
+            <h3>連結</h3>
+            <a href="index.html">關於龍品</a>
+            <a href="product.html">產品介紹</a>
+            <a href="booking.html">線上訂餐</a>
+          </div>
+          <div class="col-md-4">
+            <h3>聯絡我們</h3>
+            <p>台中市北區北平路二段68之1號<br>tel:(04)-2291-8106</p>
+          </div>
+        </div>
+    </footer>
+  </section>
+
+  <script>
+    // Tabbed Menu
+    function openMenu(evt, menuName) {
+      var i, x, tablinks;
+      x = document.getElementsByClassName("menu");
+      for (i = 0; i < x.length; i++) {
+        x[i].style.display = "none";
+      }
+      tablinks = document.getElementsByClassName("tablink");
+      for (i = 0; i < x.length; i++) {
+        tablinks[i].className = tablinks[i].className.replace(" w3-dark-grey", "");
+      }
+      document.getElementById(menuName).style.display = "block";
+      evt.currentTarget.firstElementChild.className += " w3-dark-grey";
+    }
+    document.getElementById("myLink").click();
+  </script>
 
 </body>
+
 </html>
