--- a/product.html
+++ b/product.html
@@ -1,244 +1,244 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="styles\css.css" media="screen" type="text/css" />
-<link href="https://fonts.googleapis.com/css?family=Armata&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-<script src="https://kit.fontawesome.com/c3595a1670.js" crossorigin="anonymous"></script>
-<title>產品介紹</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="styles\css.css" media="screen" type="text/css" />
+	<link href="https://fonts.googleapis.com/css?family=Armata&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+	<script src="https://kit.fontawesome.com/c3595a1670.js" crossorigin="anonymous"></script>
+	<title>產品介紹</title>
 </head>
 
 <body>
 	<section id="intro">
 		<div class="container">
-		  <div class="navbar navbar-expand-md">
-			<a class="navbar-brand" href="#">
-			  <img src="images/logo.png" alt="logo" style="width:130px;">
-			</a> 
-		  <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-		  <span class="fas fa-bars"></span>
-		  </button>
+			<div class="navbar navbar-expand-md">
+				<a class="navbar-brand" href="#">
+					<img src="images/logo.png" alt="logo" style="width:130px;">
+				</a>
+				<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+					<span class="fas fa-bars"></span>
+				</button>
 				<div class="collapse navbar-collapse " id="collapsibleNavbar">
-			<ul class="navbar-nav ">
-				<a class="navbar-brand" href="index.html"></a>
-			<ul class="navbar-nav ">
-			  <li class="nav-item">
-				<a class="nav-link" href="index.html">關於龍品</a></li>
-			  <li class="nav-item">
-				<a class="nav-link" href="product.html">產品介紹</a></li>
-			  <li class="nav-item">
-				<a class="nav-link" href="booking.html" >線上訂餐</a>
-			  <li>
-			</ul>
-		  </div>  
-		  </div>
-		</div>
-	</section>	
-<section id="second" >
-	<div class="w3-display-container ">
-		<img src="images\product.jpg" class="img-fluid" alt="龍品快餐店"  style="height: 650px; width:100%;">
-		<div class="w3-display-middle">
-		<h1>產品介紹</h1>	
-		<p>傳統滷肉搭配各種主餐，讓您回味無窮</p>
-		</div>
-	</div>
-</section>
-
-<div style="background-image: url('images/bg.jpeg');">      
-<section id="third">
-	
-		<div class="btn-group">
-			<a class="btn btn-blue"  href="#a1">魯肉便當</a>
-	        <a class="btn  btn-green" href="#a2">特製便當</a>
-	        <a class="btn  btn-orange" href="#a3">花枝捲飯</a>
-	        <a class="btn  btn-red" href="#a4">蝦捲飯</a>
-	        <a class="btn  btn-maroon" href="#a5">滷排骨飯</a>
-	        <a class="btn  btn-fuchsia" href="#a6">炸雞腿飯</a>     
-		</div>
-		<div class="btn-group">
-			<a class="btn  btn-indigo" href="#a7">鱈魚飯</a>
-	        <a class="btn  btn-saddlebrown" href="#a8">炸排骨飯</a>
-        	<a class="btn  btn-chocolate" href="#a9">香雞排飯</a>
-	        <a class="btn  btn-gold" href="#a10">雙捲飯</a>
-	        <a class="btn  btn-darkolivegreen" href="#a11">三寶飯</a>
-	        <a class="btn  btn-royalblue" href="#a12">招牌飯</a>
-		</div>
-	
-</section>
-    
-<section id="fourth">
-	<div class="container" id="a1">
-		<div class="row">
-			<div class="col-md-6" >
-				<img class="img-fluid" class="img-fluid" src="images\1.png">
-			</div>
-			<div class="col-md-6" >
-				<h1>魯肉便當 </h1>
-				<p >主餐:滷肉</br>配菜:蛋加三樣菜自選</br>價格:NT60元</p>
+					<ul class="navbar-nav ">
+						<a class="navbar-brand" href="index.html"></a>
+						<ul class="navbar-nav ">
+							<li class="nav-item">
+								<a class="nav-link" href="index.html">關於龍品</a></li>
+							<li class="nav-item">
+								<a class="nav-link" href="product.html">產品介紹</a></li>
+							<li class="nav-item">
+								<a class="nav-link" href="booking.html">線上訂餐</a>
+							<li>
+						</ul>
+				</div>
 			</div>
 		</div>
-	</div>
-
-	<div class="container" id="a2">
-		<div class="row">
-			<div class="col-md order-md-2 " >
-				<img class="img-fluid" src="images\2.png">
-			</div>
-			<div class="col-md order-md-1 " >
-				<h1>特製便當</h1>
-				<p>主餐:排骨.蝦捲.滷蛋</br>配菜:滷蛋加三樣菜自選</br>價格:NT80元</p>
+	</section>
+	<section id="second">
+		<div class="w3-display-container ">
+			<img src="images\product.jpg" class="img-fluid" alt="龍品快餐店" style="height: 650px; width:100%;">
+			<div class="w3-display-middle">
+				<h1>產品介紹</h1>
+				<p>傳統滷肉搭配各種主餐，讓您回味無窮</p>
 			</div>
 		</div>
-	</div>
+	</section>
 
-	<div class="container" id="a3">
-		<div class="row">
-			<div class="col-md-6" >
-				<img class="img-fluid" src="images\3.png"/>  
-	</div>
-	<div class="col-md-6">
-		<h1>花枝捲飯</h1>
-		<p>主餐:三條花枝卷</br>配菜:三樣菜自選</br>價格:NT85元</p>
-	</div>
-	</div>
-	</div>
-	
-	<div class="container" id="a4">
-		<div class="row">
-	<div class="col-md-6  order-md-1" >
-		<img class="img-fluid " src="images\4.png"/>
-	</div>
-	<div class="col-md-6 ">
-		<h1>蝦捲飯</h1>	
-		<p>主餐:三條蝦捲</br>配菜:三樣菜自選</br>價格:NT85元</p>
-	</div>
-	</div>
-	</div>
-
-	<div class="container" id="a5">
-		<div class="row">
-			<div class="col-md-6" >
-				<img class="img-fluid" src="images\5.png"/>
-	</div>
-	<div class="col-md-6">
-		<h1>滷排骨飯</h1>
-		<p>主餐:滷排</br>配菜:三樣菜自選</br>價格:NT80元</p>
-	</div>
-	</div>
-	</div>
-
-	<div class="container" id="a6">
-		<div class="row">
-	<div class="col-md-6  order-md-1" >
-		<img class="img-fluid " src="images\6.png"/>
-	</div>
-	<div class="col-md-6 ">
-		<h1>炸雞腿飯</h1>	
-		<p>主餐:一支雞腿</br>配菜:三樣菜自選</br>價格:NT85元</p>
-	</div>
-	</div>
-	</div>
-
-	<div class="container" id="a7">
-		<div class="row">
-			<div class="col-md-6" >
-		<img class="img-fluid" src="images\7.png"/>
-	</div>
-	<div class="col-md-6">
-		<h1>鱈魚飯</h1>
-		<p>主餐:鱈魚</br>配菜:三樣菜自選</br>價格:NT100元</p>
-	</div>
-	</div>
-	</div>
-
-	<div class="container" id="a8">
-		<div class="row">	
-	<div class="col-md-6  order-md-1" >
-		<img class="img-fluid" src="images\8.png"/>
-	</div>
-	<div class="col-md-6">
-		<h1>炸排骨飯</h1>
-		<p>主餐:排骨</br>配菜:三樣菜自選</br>價格:NT80元</p>
-	</div>
-	</div>
-	</div>
-
-	<div class="container" id="a9">
-		<div class="row">
-			<div class="col-md-6 " >
-				<img class="img-fluid" src="images\9.png">
-	</div>
-	<div class="col-md-6">
-		<h1>香雞排飯</h1>
-		<p>主餐:香雞排</br>配菜:三樣菜自選</br>價格:NT85元</p>
-	</div>
-	</div>
-	</div>
-
-	<div class="container" id="a10">
-		<div class="row">
-			
-			<div class="col-md-6  order-md-1" >
-				<img class="img-fluid" src="images\10.png">
-	</div>
-	<div class="col-md-6 ">
-		<h1>雙捲飯</h1>
-		<p>主餐:蝦捲兩條.花枝捲一條</br>配菜:三樣菜自選</br>價格:NT85元</p>
-	</div>
-	</div>
-	</div>
-
-	<div class="container" id="a11">
-		<div class="row">
-			<div class="col-md-6" >
-			<img class="img-fluid" src="images\11.png">
-	</div>
-	<div class="col-md-6">
-		<h1>三寶飯</h1>
-		<p>主餐:花枝捲一條.蝦捲一條.排骨</br>配菜:三樣菜自選</br>價格:NT85元</p>
-	</div>
-	</div>
-	</div>
-
-	<div class="container" id="a12">
-		<div class="row">
-		<div class="col-md-6  order-md-1" >
-		<img class="img-fluid" src="images\12.png">
-	</div>
-	<div class="col-md-6">
-		<h1>招牌飯</h1>
-		<p>主餐:蝦捲兩條.排骨</br>配菜:三樣菜自選</br>價格:NT85元</p>
-	</div>
-	</div>
-	</div>
-</section>
-</div>  
-
-<section id="latest">
-	<footer>
-		<div class="container">
-		<div class="row">
-			<div class="col-md-4">
-				<img class="img-fluid" src="images/logo1.png">
+	<div style="background-image: url('images/bg.jpeg');">
+		<section id="third">
+			<div class="container-fuild">
+				<div class="row justify-content-center">
+					<a class="btn btn-blue" href="#a1">魯肉便當</a>
+					<a class="btn  btn-green" href="#a2">特製便當</a>
+					<a class="btn  btn-orange" href="#a3">花枝捲飯</a>
+					<a class="btn  btn-red" href="#a4">蝦捲飯</a>
+					<a class="btn  btn-maroon" href="#a5">滷排骨飯</a>
+					<a class="btn  btn-fuchsia" href="#a6">炸雞腿飯</a>
+					<a class="btn  btn-indigo" href="#a7">鱈魚飯</a>
+					<a class="btn  btn-saddlebrown" href="#a8">炸排骨飯</a>
+					<a class="btn  btn-chocolate" href="#a9">香雞排飯</a>
+					<a class="btn  btn-gold" href="#a10">雙捲飯</a>
+					<a class="btn  btn-darkolivegreen" href="#a11">三寶飯</a>
+					<a class="btn  btn-royalblue" href="#a12">招牌飯</a>
+				</div>
 			</div>
-			<div class="col-md-4">
-				<h3>連結</h3>
-				<a href="index.html">關於龍品</a>
-				<a href="product.html">產品介紹</a>
-				<a href="booking.html">線上訂餐</a>
+		</section>
+
+		<section id="fourth">
+			<div class="container" id="a1">
+				<div class="row  justify-content-between">
+					<div class="col-md-6 col-sm-12 align-self-center">
+						<img class="img-fluid rounded mx-auto d-block" src="images\1.png">
+					</div>
+					<div class="col-md-6 col-sm-12">
+						<h1>魯肉便當 </h1>
+						<p>主餐:滷肉</br>配菜:蛋加三樣菜自選</br>價格:NT60元</p>
+					</div>
+				</div>
 			</div>
-			<div class="col-md-4">
-				<h3>聯絡我們</h3>
-				<p>台中市北區北平路二段68之1號<br>Phone:(04)-2291-8106</p>
+
+			<div class="container" id="a2">
+				<div class="row justify-content-between">
+					<div class="col-md-6 order-md-2 ">
+						<img class="img-fluid rounded mx-auto d-block" src="images\2.png">
+					</div>
+					<div class="col-md-6 order-md-1 ">
+						<h1>特製便當</h1>
+						<p>主餐:排骨.蝦捲.滷蛋</br>配菜:滷蛋加三樣菜自選</br>價格:NT80元</p>
+					</div>
+				</div>
 			</div>
-		</div>
-</footer>
-</section>
+
+			<div class="container" id="a3">
+				<div class="row justify-content-between">
+					<div class="col-md-6 align-self-center">
+						<img class="img-fluid rounded mx-auto d-block" src="images\3.png" />
+					</div>
+					<div class="col-md-6">
+						<h1>花枝捲飯</h1>
+						<p>主餐:三條花枝卷</br>配菜:三樣菜自選</br>價格:NT85元</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="container" id="a4">
+				<div class="row justify-content-between">
+					<div class="col-md-6 align-self-center  order-md-1">
+						<img class="img-fluid rounded mx-auto d-block" src="images\4.png" />
+					</div>
+					<div class="col-md-6 ">
+						<h1>蝦捲飯</h1>
+						<p>主餐:三條蝦捲</br>配菜:三樣菜自選</br>價格:NT85元</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="container" id="a5">
+				<div class="row justify-content-between">
+					<div class="col-md-6 align-self-center">
+						<img class="img-fluid rounded mx-auto d-block" src="images\5.png" />
+					</div>
+					<div class="col-md-6">
+						<h1>滷排骨飯</h1>
+						<p>主餐:滷排</br>配菜:三樣菜自選</br>價格:NT80元</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="container" id="a6">
+				<div class="row justify-content-between">
+					<div class="col-md-6 align-self-center order-md-1">
+						<img class="img-fluid rounded mx-auto d-block" src="images\6.png" />
+					</div>
+					<div class="col-md-6 ">
+						<h1>炸雞腿飯</h1>
+						<p>主餐:一支雞腿</br>配菜:三樣菜自選</br>價格:NT85元</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="container" id="a7">
+				<div class="row justify-content-between">
+					<div class="col-md-6 align-self-center">
+						<img class="img-fluid rounded mx-auto d-block" src="images\7.png" />
+					</div>
+					<div class="col-md-6">
+						<h1>鱈魚飯</h1>
+						<p>主餐:鱈魚</br>配菜:三樣菜自選</br>價格:NT100元</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="container" id="a8">
+				<div class="row justify-content-between">
+					<div class="col-md-6 align-self-center order-md-1">
+						<img class="img-fluid rounded mx-auto d-block" src="images\8.png" />
+					</div>
+					<div class="col-md-6">
+						<h1>炸排骨飯</h1>
+						<p>主餐:排骨</br>配菜:三樣菜自選</br>價格:NT80元</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="container" id="a9">
+				<div class="row justify-content-between">
+					<div class="col-md-6 align-self-center">
+						<img class="img-fluid rounded mx-auto d-block" src="images\9.png">
+					</div>
+					<div class="col-md-6">
+						<h1>香雞排飯</h1>
+						<p>主餐:香雞排</br>配菜:三樣菜自選</br>價格:NT85元</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="container" id="a10">
+				<div class="row justify-content-between">
+
+					<div class="col-md-6 align-self-center order-md-1">
+						<img class="img-fluid rounded mx-auto d-block" src="images\10.png">
+					</div>
+					<div class="col-md-6 ">
+						<h1>雙捲飯</h1>
+						<p>主餐:蝦捲兩條.花枝捲一條</br>配菜:三樣菜自選</br>價格:NT85元</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="container" id="a11">
+				<div class="row justify-content-between">
+					<div class="col-md-6 align-self-center">
+						<img class="img-fluid rounded mx-auto d-block" src="images\11.png">
+					</div>
+					<div class="col-md-6">
+						<h1>三寶飯</h1>
+						<p>主餐:花枝捲一條.蝦捲一條.排骨</br>配菜:三樣菜自選</br>價格:NT85元</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="container" id="a12">
+				<div class="row justify-content-between">
+					<div class="col-md-6 align-self-center order-md-1">
+						<img class="img-fluid rounded mx-auto d-block" src="images\12.png">
+					</div>
+					<div class="col-md-6">
+						<h1>招牌飯</h1>
+						<p>主餐:蝦捲兩條.排骨</br>配菜:三樣菜自選</br>價格:NT85元</p>
+					</div>
+				</div>
+			</div>
+		</section>
+	</div>
+
+	<section id="latest">
+		<footer>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4">
+						<img class="img-fluid" src="images/logo1.png">
+					</div>
+					<div class="col-md-4">
+						<h3>連結</h3>
+						<a href="index.html">關於龍品</a>
+						<a href="product.html">產品介紹</a>
+						<a href="booking.html">線上訂餐</a>
+					</div>
+					<div class="col-md-4">
+						<h3>聯絡我們</h3>
+						<p>台中市北區北平路二段68之1號<br>Phone:(04)-2291-8106</p>
+					</div>
+				</div>
+		</footer>
+	</section>
 </body>
+
 </html>
